--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "concurrently -n server,client -c blue,green \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "NODE_ENV=development nodemon server.js",
+    "dev:client": "npm --prefix frontend start",
+    "build": "npm run build:client",
+    "build:client": "npm --prefix frontend run build",
+    "start:prod": "NODE_ENV=production node server.js",
+    "postinstall": "npm --prefix frontend install",
     "setup": "npm run sync-db && npm run create-admin && npm run seed-categories",
     "sync-db": "node scripts/sync-database.js",
     "create-admin": "node scripts/create-admin-user.js",
@@ -41,6 +47,7 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "concurrently": "^8.2.2"
   }
 }
