Update admin user credentials in environment configuration, enhance validation for 6-digit PINs across user creation, login, and PIN change processes, and add new scripts for resetting admin and listing users in package.json.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "seed-categories": "node scripts/seed-categories.js",
     "seed-customers": "node scripts/seed-customers.js",
     "monitor": "node scripts/project-monitor.js",
+    "reset-admin": "node scripts/reset-admin.js",
+    "list-users": "node scripts/list-users.js",
     "monitor:save": "node scripts/project-monitor.js save",
     "git:status": "git status --porcelain",
     "git:changes": "git diff --name-only",
