--- a/env.example
+++ b/env.example
@@ -2,18 +2,34 @@
 PORT=5000
 NODE_ENV=development
 
-# SQLite Database
-DB_PATH=./database.sqlite
+# --- DATABASE CONFIGURATION ---
+
+# Option 1: SQLite (for local development)
+# DB_PATH=./database.sqlite
+
+# Option 2: PostgreSQL (for production)
+# When deploying, uncomment and fill these with your production database credentials
+DB_HOST=your_database_host
+DB_PORT=5432
+DB_USER=your_database_user
+DB_PASS=your_database_password
+DB_NAME=your_database_name
+
+# --- SECURITY & AUTHENTICATION ---
 
 # JWT Configuration
+# IMPORTANT: Change this to a long, random, and secret string in production!
 JWT_SECRET=tekinler-super-secret-jwt-key-change-this-in-production-2025
 JWT_EXPIRE=7d
 
 # CORS Configuration
+# In production, change this to your actual frontend domain (e.g., https://app.tekinler.com)
 CORS_ORIGIN=http://localhost:3000
 
 # Security
 BCRYPT_ROUNDS=12 
+
+# --- INITIAL SETUP ---
 
 # Initial Admin Seed (only used if no users exist)
 SEED_ADMIN_USERNAME=TekinlerAdmin
