--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "morgan": "^1.10.0",
     "sequelize": "^6.37.7",
     "socket.io": "^4.7.4",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
