Implement deleted customer management features, including API endpoints for listing and permanently deleting customers with sales history checks. Update database models and API utility functions to support these operations. Enhance error handling and logging for better debugging. Update environment configuration for PostgreSQL support and modify package dependencies accordingly.

--- a/package.json
+++ b/package.json
@@ -44,16 +44,17 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "semver": "^7.7.2",
     "sequelize": "^6.37.7",
     "socket.io": "^4.7.4",
-    "sqlite3": "^5.1.7",
-    "pg": "^8.11.5",
-    "pg-hstore": "^2.3.4"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18 <21"
