feat: Add database maintenance script and cron job setup
- Implemented db-maintenance.js for database integrity checks, backups, and cleanup of old backups and WAL files.
- Created setup-cron.sh to automate the setup of cron jobs for daily backups, weekly maintenance, and daily integrity checks.
- Added logging functionality for cron jobs to track their execution.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "reset-admin": "node scripts/reset-admin.js",
     "list-users": "node scripts/list-users.js",
     "monitor:save": "node scripts/project-monitor.js save",
+    "db:maintenance": "node scripts/db-maintenance.js",
+    "db:backup": "node scripts/db-maintenance.js",
+    "db:check": "sqlite3 database.sqlite \"PRAGMA integrity_check;\"",
     "git:status": "git status --porcelain",
     "git:changes": "git diff --name-only",
     "git:recent": "git log --oneline -10",
