--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "jsbarcode": "^3.12.1",
