Remove SQLite database files and update Docker configuration for production environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - NODE_ENV=production
       - PORT=5000
     volumes:
-      - ./database.sqlite:/app/database.sqlite
+      # - ./database.sqlite:/app/database.sqlite
       - ./logs:/app/logs
       - ./backups:/app/backups
     restart: unless-stopped
